--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ matplotlib == 3.3.1
 mplcursors == 0.3
 seaborn
 requests
-astropy >=4.2
-photutils > 1.0
+astropy < 4.0
+photutils > 0.7
 PyYAML
 psycopg2-binary
 jplephem
